--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\eoayala\\AppData\\Roaming\\NetBeans\\12.6\\tomcat90.properties
-j2ee.server.home=C:/apache-tomcat-9.0.41
-j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-9.0.41
+deploy.ant.properties.file=C:\\Users\\eoayala\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3478517765.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/eoayala/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\eoayala\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\eoayala\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
