--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.8.0.jar=C:\\Users\\edins\\Downloads\\gson-2.8.0.jar
+file.reference.gson-2.8.0.jar=D:\\UTP\\2022\\Ciclo 1\\DESARROLLO WEB INTEGRADO\\INSTALADORES\\gson-2.8.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
